--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -1,11 +1,20 @@
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Button */
+/* Basic */
 
+	code,
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	select,
+	textarea,
+	.box,
+	.image,
+	.image img,
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
@@ -19,56 +28,34 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select,
-	textarea {
-		position: relative;
-		-ms-behavior: url("css/ie/PIE.htc");
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
 	select {
-		height: 2.75em;
 		line-height: 2.75em;
 	}
 
-	input[type="checkbox"] + label:before,
-	input[type="radio"] + label:before {
-		display: none;
+	input[type="checkbox"],
+	input[type="radio"] {
+		-moz-appearance: normal;
+		-webkit-appearance: normal;
+		-o-appearance: normal;
+		-ms-appearance: normal;
+		appearance: normal;
 	}
 
-/* Image */
-
-	.image {
-		position: relative;
-		-ms-behavior: url("css/ie/PIE.htc");
-	}
-
-		.image:before, .image:after {
-			display: none !important;
+		input[type="checkbox"] + label,
+		input[type="radio"] + label {
+			padding: 0 0 0 1.5em;
 		}
 
-		.image img {
-			position: relative;
-			-ms-behavior: url("css/ie/PIE.htc");
-		}
+			input[type="checkbox"] + label:before,
+			input[type="radio"] + label:before {
+				display: none;
+			}
 
-/* Header */
+/* Button */
 
-	#header {
-		background-image: url("../../images/bg.jpg");
-		background-repeat: no-repeat;
-		background-size: cover;
-		-ms-behavior: url("css/ie/backgroundsize.min.htc");
-	}
-
-		#header h1 {
-			color: #ffffff;
-		}
-
-/* Footer */
-
-	#footer .icons a {
-		color: #ffffff;
+	input[type="submit"].alt,
+	input[type="reset"].alt,
+	input[type="button"].alt,
+	.button.alt {
+		border: solid 2px #e4e4e4;
 	}
