--- a/css/style-large.css
+++ b/css/style-large.css
@@ -1,44 +1,23 @@
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Basic */
+
+	body, input, select, textarea {
+		font-size: 11pt;
+	}
+
 /* Header */
 
 	#header {
-		padding: 6em 3em 3em 3em;
-		width: 30%;
+		width: 20em;
 	}
 
-		#header h1 {
-			font-size: 1.25em;
-		}
+/* Wrapper */
 
-			#header h1 br {
-				display: none;
-			}
-
-/* Footer */
-
-	#footer {
-		padding: 0 3em 5em 3em;
-		width: 30%;
-	}
-
-		#footer .copyright li {
-			border-left-width: 0;
-			display: block;
-			line-height: 2.25em;
-			margin-left: 0;
-			padding-left: 0;
-		}
-
-/* Main */
-
-	#main {
-		margin-left: 30%;
-		max-width: none;
-		padding: 6em 3em 3em 3em;
-		width: calc(100% - 30%);
+	#wrapper {
+		padding-right: 20em;
 	}
