--- a/css/style-xlarge.css
+++ b/css/style-xlarge.css
@@ -1,5 +1,5 @@
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -7,5 +7,31 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 12pt;
+		font-size: 13pt;
+	}
+
+/* Header */
+
+	#header {
+		width: 21em;
+	}
+
+		#header > header {
+			padding: 2em;
+		}
+
+		#header > footer {
+			padding: 1.5em;
+		}
+
+/* Wrapper */
+
+	#wrapper {
+		padding-right: 21em;
+	}
+
+/* Main */
+
+	#main > section > .container {
+		padding: 4em 0 2em 0;
 	}
