--- a/css/style-xsmall.css
+++ b/css/style-xsmall.css
@@ -1,18 +1,28 @@
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Basic */
+
+	html, body {
+		min-width: 320px;
+	}
+
+	body, input, select, textarea {
+		font-size: 12pt;
+	}
+
 /* List */
 
 	ul.actions {
-		margin: 0 0 2em 0;
+		margin: 0 0 2.25em 0;
 	}
 
 		ul.actions li {
 			display: block;
-			padding: 1em 0 0 0;
+			padding: 1.125em 0 0 0;
 			text-align: center;
 			width: 100%;
 		}
@@ -22,8 +32,8 @@
 			}
 
 			ul.actions li > * {
-				margin: 0 !important;
 				width: 100%;
+				margin: 0 !important;
 			}
 
 				ul.actions li > *.icon:before {
@@ -31,29 +41,23 @@
 				}
 
 		ul.actions.small li {
-			padding: 0.5em 0 0 0;
+			padding: 0.5625em 0 0 0;
 		}
 
 			ul.actions.small li:first-child {
 				padding-top: 0;
 			}
 
-/* Header */
-
-	#header {
-		padding: 4.5em 1.5em;
+	ul.feature-icons li {
+		display: block;
+		width: 100%;
 	}
 
-		#header h1 br {
-			display: none;
-		}
+/* Button */
 
-/* Footer */
-
-	#footer .copyright li {
-		border-left-width: 0;
-		display: block;
-		line-height: 2.25em;
-		margin-left: 0;
-		padding-left: 0;
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	.button {
+		padding: 0;
 	}
