--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,41 +1,51 @@
 // Duration.
 	$duration-transition:		0.2s;
 
+// Side.
+	// Change this to 'left' to move the header sidebar to the left-hand side
+	// of the viewport. Note that if you do this, be sure to also change
+	// sidePanel's 'side' in js/init.js.
+	$side-header:				'right';
+
 // Size.
-	$size-border-radius:		0.35em;
+	$size-border-radius:		5px;
+	$size-border-width:			2px;
 	$size-element-height:		2.75em;
-	$size-element-margin:		2em;
+	$size-element-margin:		2.25em;
 
 // Font.
-	$font-family:				'Source Sans Pro', Helvetica, sans-serif;
-	$font-family-fixed:			'Courier New', monospace;
+	$font-family:				'Lato', sans-serif;
+	$font-family-fixed:			'Source Code Pro', monospace;
 	$font-weight:				400;
-	$font-weight-bold:			400;
+	$font-weight-bold:			700;
 
 // Color.
 	$color-bg:					#fff;
-	$color-fg:					#a2a2a2;
-	$color-fg-bold:				#787878;
-	$color-fg-light:			#b2b2b2;
-	$color-border:				#efefef;
-	$color-border-bg:			#f7f7f7;
-	$color-border2:				#dfdfdf;
-	$color-border2-bg:			#e7e7e7;
+	$color-fg:					#888;
+	$color-fg-bold:				#777;	
+	$color-fg-light:			#aaa;
 
-	$color-accent-bg:			#49bf9d;
-	$color-accent-fg:			mix($color-accent-bg, #ffffff, 25%);
+	$color-accent-bg:			#4acaa8;
 	$color-accent-fg-bold:		#ffffff;
-	$color-accent-fg-light:		mix($color-accent-bg, #ffffff, 40%);
-	$color-accent-border:		rgba(255,255,255,0.25);
-	$color-accent-border-bg:	rgba(255,255,255,0.075);
-	$color-accent-border2:		rgba(255,255,255,0.5);
-	$color-accent-border2-bg:	rgba(255,255,255,0.2);
-	
-	$color-accent2-bg:			#1f1815;
-	$color-accent2-fg:			rgba(255,255,255,0.5);
+	$color-accent-fg:			mix($color-accent-bg, $color-accent-fg-bold, 25%);
+	$color-accent-fg-light:		mix($color-accent-bg, $color-accent-fg-bold, 40%);
+
+	$color-accent2-bg:			#989898;
 	$color-accent2-fg-bold:		#ffffff;
-	$color-accent2-fg-light:	rgba(255,255,255,0.4);
-	$color-accent2-border:		rgba(255,255,255,0.25);
-	$color-accent2-border-bg:	rgba(255,255,255,0.075);
-	$color-accent2-border2:		rgba(255,255,255,0.5);
-	$color-accent2-border2-bg:	rgba(255,255,255,0.2);
+	$color-accent2-fg:			mix($color-accent2-bg, $color-accent2-fg-bold, 25%);
+	$color-accent2-fg-light:	mix($color-accent2-bg, $color-accent2-fg-bold, 40%);
+
+	$color-border:				#f4f4f4;
+	$color-border-bg:			#fafafa;
+
+	$color-border2:				#e4e4e4;
+	$color-border2-bg:			#f4f4f4;
+	
+	$color-border3:				#e0e0e0;
+	$color-border3-bg:			#eaeaea;
+	
+	$color-header-bg:			$color-accent-bg;
+	$color-header-fg-bold:		$color-accent-fg-bold;
+	$color-header-fg:			mix($color-header-bg, $color-header-fg-bold, 25%);
+	$color-header-fg-light:		mix($color-header-bg, $color-header-fg-bold, 40%);
+	$color-header-border:		mix($color-header-bg, $color-header-fg-bold, 90%);
