--- a/sass/ie/v8.scss
+++ b/sass/ie/v8.scss
@@ -2,13 +2,22 @@
 @import 'mixins';
 
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Button */
+/* Basic */
 
+	code,
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	select,
+	textarea,
+	.box,
+	.image,
+	.image img,
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
@@ -22,64 +31,30 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select,
-	textarea {
-		position: relative;
-		-ms-behavior: url('css/ie/PIE.htc');
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
 	select {
-		height: $size-element-height;
 		line-height: $size-element-height;
 	}
-
+	
 	input[type="checkbox"],
 	input[type="radio"] {
+		@include vendor-property('appearance', 'normal');
+
 		& + label {
+			padding: 0 0 0 1.5em;
+
 			&:before {
 				display: none;
 			}
 		}
-	}
+	}	
 
-/* Image */
+/* Button */
 
-	.image {
-		position: relative;
-		-ms-behavior: url('css/ie/PIE.htc');
-
-		&:before, &:after {
-			display: none !important;
-		}
-
-		img {
-			position: relative;
-			-ms-behavior: url('css/ie/PIE.htc');
-		}
-	}
-
-/* Header */
-
-	#header {
-		background-image: url('../../images/bg.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		-ms-behavior: url('css/ie/backgroundsize.min.htc');
-		
-		h1 {
-			color: $color-accent2-fg-bold;
-		}
-	}
-	
-/* Footer */
-
-	#footer {
-		.icons {
-			a {
-				color: $color-accent2-fg-bold;
-			}
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	.button {
+		&.alt {
+			border: solid $size-border-width $color-border2;
 		}
 	}
