--- a/sass/style-small.scss
+++ b/sass/style-small.scss
@@ -2,53 +2,79 @@
 @import 'mixins';
 
 /*
-	Strata by HTML5 UP
+	Read Only by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-$size-header-pad:		1.5em;
-
 /* Basic */
 
-	h1 {
-		font-size: 1.5em;
+	body, input, select, textarea {
+		font-size: 12pt;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		br {
+			display: none;
+		}
 	}
 
 	h2 {
-		font-size: 1.2em;
+		font-size: 1.75em;
 	}
 
 	h3 {
+		font-size: 1.5em;
+	}
+
+	h4 {
 		font-size: 1em;
+	}
+
+/* Image */
+
+	.image {
+		&.left {
+			margin: 0 1.5em 1em 0;
+		}
+				
+		&.right {
+			margin: 0 0 1em 1.5em;
+		}
 	}
 
 /* Section/Article */
 
-	section, article {
-		&.special {
-			text-align: center;
-		}
-	}
-
 	header {
+		br {
+			display: none;
+		}
+
 		&.major {
 			h2 {
-				font-size: 1.35em;
+				font-size: 2.5em;
+
+				& + p {
+					font-size: 1.5em;
+				}
 			}
 		}
 	}
 
-/* List */
+/* Features */
 
-	ul {
-		&.labeled-icons {
-			li {
-				padding-left: 2em;
-
-				h3 {
-					line-height: 1.75em;
-				}
+	.features {
+		article {
+			.image {
+				display: block;
+				margin: 0 0 $size-element-margin 0;
+				padding-right: 0;
+				width: 100%;
+			}
+			
+			.inner {
+				display: block;
+				width: 100%;
 			}
 		}
 	}
@@ -56,39 +82,76 @@ $size-header-pad:		1.5em;
 /* Header */
 
 	#header {
-		padding: ($size-header-pad * 1.5) $size-header-pad;
-		
-		h1 {
-			font-size: 1.35em;
+		> header {
+			padding: 2em;
+			
+			.avatar {
+				margin: 0 auto ($size-element-margin * 0.75) auto;
+				width: 6em;
+			}
+
+			h1 {
+				font-size: 1.5em;
+			}
+			
+			p {
+				margin: 1em 0 0 0;
+			}
 		}
-	}
 
-/* Footer */
-
-	#footer {
-		padding: ($size-header-pad * 1.5) $size-header-pad;
+		> footer {
+			padding: 1.5em;
+		}
 	}
 	
 /* Main */
 
-	#main {
-		padding: ($size-header-pad * 1.5) $size-header-pad (($size-header-pad * 1.5) - $size-element-margin) $size-header-pad;
-
+	#main {		
 		> section {
-			margin: ($size-header-pad * 1.5) 0 0 0;
-			padding: ($size-header-pad * 1.5) 0 0 0;
+			> .container {
+				padding: 2em 0 0 0;
+			}
+		}
+	}
+
+/* One */
+
+	#one {
+		&:before {
+			height: 7em;
 		}
 	}
 	
-/* Poptrox */
+/* Footer */
 
-	.poptrox-popup {
-		border-radius: 0;
+	#footer {
+		text-align: center;
 		
-		.nav-next,
-		.nav-previous {
+		.copyright {
+			li {
+				border-left: 0;
+				display: block;
+				line-height: 1.75em;
+				margin: 0.75em 0 0 0;
+				padding-left: 0;
+				
+				&:first-child {
+					margin-top: 0;
+				}
+			}
+		}
+	}
+	
+/* Layers */
+
+	#titleBar {
+		.toggle {
+			height: 4em;
+			width: 6em;
+
 			&:before {
-				margin-top: -1em;
+				font-size: 14px;
+				width: 44px;
 			}
 		}
 	}
