--- a/css/style-large.css
+++ b/css/style-large.css
@@ -1,5 +1,5 @@
 /*
-	Read Only by HTML5 UP
+	Photon by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -7,17 +7,49 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 11pt;
+		font-size: 13pt;
 	}
+
+	h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+		display: none;
+	}
+
+/* List */
+
+	ul.major-icons li {
+		padding: 2em;
+	}
+
+		ul.major-icons li .icon {
+			height: 8em;
+			line-height: 8em;
+			width: 8em;
+		}
+
+/* Main */
+
+	.main {
+		padding: 4em 0 2em 0;
+	}
+
+		.main.style2 {
+			background-attachment: scroll;
+		}
 
 /* Header */
 
 	#header {
-		width: 20em;
+		padding: 5em 0 5em 0;
+		background-attachment: scroll;
 	}
 
-/* Wrapper */
+		#header br {
+			display: inline;
+		}
 
-	#wrapper {
-		padding-right: 20em;
+/* Footer */
+
+	#footer {
+		padding: 4em 0 4em 0;
+		background-attachment: scroll;
 	}
