--- a/css/style-small.css
+++ b/css/style-small.css
@@ -1,5 +1,5 @@
 /*
-	Read Only by HTML5 UP
+	Photon by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -10,121 +10,73 @@
 		font-size: 12pt;
 	}
 
-	h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
-		display: none;
-	}
-
-	h2 {
+	h1 {
 		font-size: 1.75em;
 	}
 
-	h3 {
+	h2 {
 		font-size: 1.5em;
+	}
+
+	h3 {
+		font-size: 1.1em;
 	}
 
 	h4 {
 		font-size: 1em;
 	}
 
-/* Image */
+/* List */
 
-	.image.left {
-		margin: 0 1.5em 1em 0;
-	}
-
-	.image.right {
-		margin: 0 0 1em 1.5em;
-	}
-
-/* Section/Article */
-
-	header br {
-		display: none;
-	}
-
-	header.major h2 {
-		font-size: 2.5em;
-	}
-
-		header.major h2 + p {
-			font-size: 1.5em;
-		}
-
-/* Features */
-
-	.features article .image {
-		display: block;
-		margin: 0 0 2.25em 0;
-		padding-right: 0;
-		width: 100%;
-	}
-
-	.features article .inner {
-		display: block;
-		width: 100%;
-	}
-
-/* Header */
-
-	#header > header {
-		padding: 2em;
-	}
-
-		#header > header .avatar {
-			margin: 0 auto 1.6875em auto;
-			width: 6em;
-		}
-
-		#header > header h1 {
-			font-size: 1.5em;
-		}
-
-		#header > header p {
-			margin: 1em 0 0 0;
-		}
-
-	#header > footer {
+	ul.major-icons li {
 		padding: 1.5em;
+	}
+
+		ul.major-icons li .icon {
+			height: 5em;
+			line-height: 5em;
+			width: 5em;
+		}
+
+			ul.major-icons li .icon:before {
+				font-size: 42px;
+			}
+
+/* Icon */
+
+	.icon.major {
+		margin: 0 0 1em 0;
+	}
+
+/* Button */
+
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	button,
+	.button {
+		height: 3em;
+		line-height: 3em;
 	}
 
 /* Main */
 
-	#main > section > .container {
-		padding: 2em 0 0 0;
+	.main {
+		padding: 3em 1.5em 1em 1.5em;
 	}
 
-/* One */
+/* Header */
 
-	#one:before {
-		height: 7em;
+	#header {
+		padding: 4em 3em 4em 3em;
 	}
+
+		#header .actions {
+			margin: 2em 0 0 0;
+		}
 
 /* Footer */
 
 	#footer {
-		text-align: center;
+		padding: 3em 1.5em 3em 1.5em;
 	}
-
-		#footer .copyright li {
-			border-left: 0;
-			display: block;
-			line-height: 1.75em;
-			margin: 0.75em 0 0 0;
-			padding-left: 0;
-		}
-
-			#footer .copyright li:first-child {
-				margin-top: 0;
-			}
-
-/* Layers */
-
-	#titleBar .toggle {
-		height: 4em;
-		width: 6em;
-	}
-
-		#titleBar .toggle:before {
-			font-size: 14px;
-			width: 44px;
-		}
