--- a/css/style-xsmall.css
+++ b/css/style-xsmall.css
@@ -1,28 +1,18 @@
 /*
-	Read Only by HTML5 UP
+	Photon by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
-
-	html, body {
-		min-width: 320px;
-	}
-
-	body, input, select, textarea {
-		font-size: 12pt;
-	}
-
 /* List */
 
 	ul.actions {
-		margin: 0 0 2.25em 0;
+		margin: 0 0 2em 0;
 	}
 
 		ul.actions li {
 			display: block;
-			padding: 1.125em 0 0 0;
+			padding: 1em 0 0 0;
 			text-align: center;
 			width: 100%;
 		}
@@ -32,8 +22,8 @@
 			}
 
 			ul.actions li > * {
-				width: 100%;
 				margin: 0 !important;
+				width: 100%;
 			}
 
 				ul.actions li > *.icon:before {
@@ -41,17 +31,12 @@
 				}
 
 		ul.actions.small li {
-			padding: 0.5625em 0 0 0;
+			padding: 0.5em 0 0 0;
 		}
 
 			ul.actions.small li:first-child {
 				padding-top: 0;
 			}
-
-	ul.feature-icons li {
-		display: block;
-		width: 100%;
-	}
 
 /* Button */
 
@@ -61,3 +46,40 @@
 	.button {
 		padding: 0;
 	}
+
+/* Main */
+
+	.main {
+		padding: 2em 1.5em 0.1em 1.5em;
+	}
+
+/* Header */
+
+	#header {
+		padding: 4em 2em 4em 2em;
+	}
+
+		#header br {
+			display: none;
+		}
+
+/* Footer */
+
+	#footer {
+		padding: 2em 1.5em 2em 1.5em;
+	}
+
+		#footer .copyright {
+			margin: 1.5em 0 0 0;
+		}
+
+			#footer .copyright li {
+				border: 0;
+				display: block;
+				margin: 1em 0 0 0;
+				padding: 0;
+			}
+
+				#footer .copyright li:first-child {
+					margin-top: 0;
+				}
