--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,51 +1,50 @@
+// Mixins.
+	@mixin padding($tb, $lr, $pad: (0,0,0,0)) {
+		padding: ($tb + nth($pad,1)) ($lr + nth($pad,2)) max(0.1em, $tb - $size-element-margin + nth($pad,3)) ($lr + nth($pad,4));
+	}
+
 // Duration.
 	$duration-transition:		0.2s;
 
-// Side.
-	// Change this to 'left' to move the header sidebar to the left-hand side
-	// of the viewport. Note that if you do this, be sure to also change
-	// sidePanel's 'side' in js/init.js.
-	$side-header:				'right';
-
 // Size.
-	$size-border-radius:		5px;
-	$size-border-width:			2px;
+	$size-border-radius:		4px;
 	$size-element-height:		2.75em;
-	$size-element-margin:		2.25em;
+	$size-element-margin:		2em;
 
 // Font.
-	$font-family:				'Lato', sans-serif;
-	$font-family-fixed:			'Source Code Pro', monospace;
-	$font-weight:				400;
-	$font-weight-bold:			700;
+	$font-family:				'Source Sans Pro', Helvetica, sans-serif;
+	$font-family-fixed:			'Courier New', monospace;
+	$font-weight:				300;
+	$font-weight-bold:			400;
 
 // Color.
 	$color-bg:					#fff;
-	$color-fg:					#888;
-	$color-fg-bold:				#777;	
-	$color-fg-light:			#aaa;
+	$color-fg:					#666;
+	$color-fg-bold:				#555;
+	$color-fg-light:			#999;
+	$color-border:				rgba(144,144,144,0.5);
+	$color-border-bg:			rgba(144,144,144,0.075);
+	$color-border2:				rgba(144,144,144,0.75);
+	$color-border2-bg:			rgba(144,144,144,0.2);
 
-	$color-accent-bg:			#4acaa8;
-	$color-accent-fg-bold:		#ffffff;
-	$color-accent-fg:			mix($color-accent-bg, $color-accent-fg-bold, 25%);
-	$color-accent-fg-light:		mix($color-accent-bg, $color-accent-fg-bold, 40%);
+	$color-dark-bg:				#666666;
+	$color-dark-fg-bold:		#ffffff;
+	$color-dark-fg:				rgba(255,255,255,0.75);
+	$color-dark-fg-light:		rgba(255,255,255,0.5);
+	$color-dark-border:			#ffffff;
+	$color-dark-border-bg:		rgba(255,255,255,0.125);
+	$color-dark-border2:		rgba(255,255,255,0.75);
+	$color-dark-border2-bg:		rgba(255,255,255,0.25);
 
-	$color-accent2-bg:			#989898;
-	$color-accent2-fg-bold:		#ffffff;
-	$color-accent2-fg:			mix($color-accent2-bg, $color-accent2-fg-bold, 25%);
-	$color-accent2-fg-light:	mix($color-accent2-bg, $color-accent2-fg-bold, 40%);
-
-	$color-border:				#f4f4f4;
-	$color-border-bg:			#fafafa;
-
-	$color-border2:				#e4e4e4;
-	$color-border2-bg:			#f4f4f4;
-	
-	$color-border3:				#e0e0e0;
-	$color-border3-bg:			#eaeaea;
-	
-	$color-header-bg:			$color-accent-bg;
-	$color-header-fg-bold:		$color-accent-fg-bold;
-	$color-header-fg:			mix($color-header-bg, $color-header-fg-bold, 25%);
-	$color-header-fg-light:		mix($color-header-bg, $color-header-fg-bold, 40%);
-	$color-header-border:		mix($color-header-bg, $color-header-fg-bold, 90%);
+	$color-accent1:				#c3e895;
+	$color-accent2:				#8addaa;
+	$color-accent3:				#6bd4c8;
+	$color-accent4:				#57aed3;
+	$color-accent5:				#4a87d3;
+	$color-accent6:				#6b88e6;
+	$color-accent1-alt:			desaturate(darken($color-accent1, 15), 20);
+	$color-accent2-alt:			desaturate(darken($color-accent2, 15), 20);
+	$color-accent3-alt:			desaturate(darken($color-accent3, 15), 20);
+	$color-accent4-alt:			desaturate(darken($color-accent4, 15), 20);
+	$color-accent5-alt:			desaturate(darken($color-accent5, 15), 20);
+	$color-accent6-alt:			desaturate(darken($color-accent6, 15), 20);
