--- a/css/ie/v9.css
+++ b/css/ie/v9.css
@@ -1,55 +1,44 @@
 /*
-	Photon by HTML5 UP
+	Tessellate by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Header */
+/*********************************************************************************/
+/* Main Sections                                                                 */
+/*********************************************************************************/
 
-	#header {
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#4fa49a", endColorStr="#4361c2", GradientType=1);
-		position: relative;
+	.main
+	{
 	}
 
-		#header:before {
-			background-image: url("../images/overlay2.png"), url("../images/overlay3.svg");
-			background-position: top left,							center center;
-			background-size: auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
+		.main > .content
+		{
 		}
 
-		#header > * {
-			position: relative;
-			z-index: 1;
+		.main > .content.style1
+		{
+			background:	url('../images/bgtr.svg') top right no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/overlay.png'),
+						url('images/content-style1.svg');
 		}
 
-/* Footer */
-
-	#footer {
-		background-image: none;
-		filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr="#4361c2", endColorStr="#4fa49a", GradientType=1);
-		position: relative;
-	}
-
-		#footer:before {
-			background-image: url("../images/overlay2.png"), url("../images/overlay4.svg");
-			background-position: top left,							center center;
-			background-size: auto,								cover;
-			content: '';
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
+		.main > .content.style2
+		{
+			background:	url('../images/bgtr.svg') top right no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/overlay.png'),
+						url('images/content-style2.svg');
 		}
 
-		#footer > * {
-			position: relative;
-			z-index: 1;
+		.main > .content.style3
+		{
+			background:	url('../images/bgtr.svg') top right no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/bgbl.svg') bottom left no-repeat,
+						url('../images/overlay.png'),
+						url('images/content-style3.svg');
 		}
