--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -1,20 +1,35 @@
 /*
-	Read Only by HTML5 UP
+	Directive by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
+	hr {
+		border-top: solid 1px #cccccc;
+	}
+
+	blockquote {
+		border-left: solid 0.5em #cccccc;
+	}
+
+/* Section/Article */
+
+	header.major {
+		border-color: #cccccc;
+	}
+
+		header.major p {
+			border-top: solid 1px #cccccc;
+		}
+
+	footer.major {
+		border-color: #cccccc;
+	}
+
+/* Button */
+
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
@@ -23,39 +38,90 @@
 		-ms-behavior: url("css/ie/PIE.htc");
 	}
 
+		input[type="submit"].alt,
+		input[type="reset"].alt,
+		input[type="button"].alt,
+		.button.alt {
+			border: solid 1px #cccccc;
+		}
+
 /* Form */
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select {
-		line-height: 2.75em;
+	select,
+	textarea {
+		position: relative;
+		border: solid 1px #cccccc;
+		-ms-behavior: url("css/ie/PIE.htc");
 	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		-moz-appearance: normal;
-		-webkit-appearance: normal;
-		-o-appearance: normal;
-		-ms-appearance: normal;
-		appearance: normal;
+/* Image */
+
+	.image {
+		border: 0;
+		display: inline-block;
+		position: relative;
 	}
 
-		input[type="checkbox"] + label,
-		input[type="radio"] + label {
-			padding: 0 0 0 1.5em;
+		.image:after {
+			display: none;
 		}
 
-			input[type="checkbox"] + label:before,
-			input[type="radio"] + label:before {
-				display: none;
-			}
+/* Box */
 
-/* Button */
+	.box {
+		border: solid 1px #cccccc;
+	}
 
-	input[type="submit"].alt,
-	input[type="reset"].alt,
-	input[type="button"].alt,
-	.button.alt {
-		border: solid 2px #e4e4e4;
+/* Header */
+
+	#header {
+		background-image: url("../../images/header.jpg") !important;
+		background-size: cover !important;
+		background-position: scroll !important;
+		-ms-behavior: url("css/ie/backgroundsize.min.htc");
+		padding: 8em 0 !important;
+		color: white;
+	}
+
+		#header a {
+			color: inherit;
+		}
+
+		#header:before {
+			content: '';
+			background-image: url("../images/overlay.png");
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			display: block;
+			z-index: 0;
+		}
+
+		#header > * {
+			position: relative;
+			z-index: 1;
+		}
+
+		#header .logo {
+			-ms-behavior: url("css/ie/PIE.htc");
+		}
+
+/* Footer */
+
+	#footer {
+		background-image: none !important;
+		margin-top: 0 !important;
+		padding: 4em 0 !important;
+		color: white;
+	}
+
+/* Main */
+
+	#main {
+		padding: 4em 0;
 	}
