--- a/css/style.css
+++ b/css/style.css
@@ -914,7 +914,7 @@
 
 	#header {
 		background: #66b3ff;
-		color: #d1f1e9;
+		color: ##cce6ff;
 		height: 100%;
 		position: fixed;
 		text-align: center;
@@ -936,7 +936,7 @@
 		}
 
 		#header a {
-			color: #d1f1e9;
+			color: #cce6ff;
 		}
 
 			#header a:hover {
@@ -959,7 +959,7 @@
 			}
 
 			#header > header p {
-				color: #d1f1e9;
+				color: #cce6ff;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
