--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,7 @@
 		}
 
 			#header > nav ul li {
-				border-top: solid 2px #5ccfb0;
+				border-top: solid 2px #cce6ff;
 				display: block;
 				padding: 0;
 			}
