--- a/css/style.css
+++ b/css/style.css
@@ -1038,14 +1038,14 @@
 /* One */
 
 	#one:before {
-	/*	background-image: url("../images/banner.jpg");
+	background-image: url("../images/banner.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
 		content: '';
 		display: block;
-		height: 15em;
-		width: 100%; */
+		height: 0.1em;
+		width: 100%;
 	}
 
 /* Footer */
