--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -15,7 +15,7 @@
 
 // Font.
 	$font-family:				'Source Sans Pro', sans-serif;
-	$font-family-fixed:			'Source Code Pro', monospace;
+	$font-family-fixed:			'Source Code Pro', sans-serif;
 	$font-weight:				400;
 	$font-weight-bold:			700;
 
