--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500'));
 
 /*
 	Read Only by HTML5 UP
@@ -16,9 +16,9 @@
 
 	body, input, select, textarea {
 		color: #888;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Quicksand', sans-serif;
 		font-size: 16pt;
-		font-weight: 400 !important;
+		font-weight: 400;
 		line-height: 1.75em;
 	}
 
@@ -122,14 +122,14 @@
 		background: #555;
 		border-radius: 5px;
 		color: #fff;
-		font-family: "Source Code Pro", monospace;
+		font-family: 'Quicksand', sans-serif;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
 	}
 
 	pre {
-		font-family: "Source Code Pro", monospace;
+		font-family: 'Quicksand', sans-serif;
 		font-size: 0.9em;
 		margin: 0 0 2.25em 0;
 	}
@@ -910,6 +910,8 @@
 				margin-bottom: 0;
 			}
 
+
+
 /* Header */
 
 	#header {
@@ -1031,22 +1033,23 @@
 			padding: 6em 0 4em 0;
 		}
 
+
 		#main > section:first-child {
 			border-top: 0;
 		}
 
 /* One */
 
-	#one:before {
-	background-image: url("../images/banner.jpg");
-		background-position: top right;
-		background-repeat: no-repeat;
-		background-size: cover;
-		content: '';
-		display: block;
-		height: 0.01em;
-		width: 100%;
-	}
+#mount {
+	padding: 0em 0 10em 12em;
+	background-position: top right;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: block;
+	height: 6em;
+	width: 100%;
+
+}
 
 /* Footer */
 
