--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -14,10 +14,10 @@
 	$size-element-margin:		2.25em;
 
 // Font.
-	$font-family:				'Source Sans Pro', sans-serif;
-	$font-family-fixed:			'Source Code Pro', sans-serif;
+	$font-family:		'Quicksand', sans-serif;
+	$font-family-fixed:		'Quicksand', sans-serif;
 	$font-weight:				400;
-	$font-weight-bold:			700;
+	$font-weight-bold:			500;
 
 // Color.
 	$color-bg:					#fff;
