--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -7,7 +7,7 @@
 /* Basic */
 
 #mount {
-	 padding: 0em 0em 0em 25em;
+	 padding: 0em 0em 0em 30em;
  /*	display: block; */
 
 }
@@ -29,7 +29,7 @@
 /* Header */
 
 	#skel-layers-wrapper {
-		padding-top: 44px;
+		padding-top: 20px;
 	}
 
 	#header {
@@ -116,6 +116,6 @@
 			}
 
 	#sidePanel {
-		background: #06B0D4;
+		background: linear-gradient(to bottom, rgba(0, 110, 130, 1) 0%, rgba(0, 110, 130, 0) 100%);
 		color: #b3d1ff;
 	}
