updated scss file manully for it to reflect changes remote

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -159,6 +159,8 @@
 		top: -1em;
 		vertical-align: middle;
 		width: 90%;
+		margin-bottom: 25px;
+		margin-top: 25px;
 		
 		h1 {
 			font-size: 4.35em;
